# AsDict

./: .gitignore  README.md  pyproject.toml  read_rules.py
example-dicts/: example2.dict  example2.dict~  example3.dict  example3.dict~  exmple.dict  exmple.dict~
src/asdict/: __init__.py  __init__.py~  asdict.py  errorsClasses.py  read_rules.py
