[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asdict"
version = "0.0.1"
authors = [
  { name="Konstantinos Papadimos", email="dinogreco2000@gmail.com" },
]
description = "python library that reads .dict files as dictionaries"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PKpers/AsDict"
"Bug Tracker" = "https://github.com/PKpers/AsDict/issues" 